# cli

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
openapi/: openapi.json
scripts/: generate-client.sh
skills/indices/: SKILL.md
skills/indices-auth/: SKILL.md
skills/indices-cli-basics/: SKILL.md
skills/indices-run-operations/: SKILL.md
skills/indices-secrets/: SKILL.md
skills/indices-task-management/: SKILL.md
src/: analytics.rs  cli.rs  config.rs  errors.rs  main.rs  oauth.rs  output.rs  telemetry.rs
src/client/: mod.rs
src/commands/: auth.rs  mod.rs  payload.rs  runs.rs  secrets.rs  tasks.rs
