[package]
name = "indices-cli"
version = "0.0.5"
edition = "2024"
license = "MIT"
homepage = "https://indices.io"
repository = "https://github.com/indicesio/cli"

[[bin]]
name = "indices"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5"
progenitor-client = "0.13"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "stream"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
thiserror = "2"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[build-dependencies]
openapiv3 = "2.2"
prettyplease = "0.2"
progenitor = "0.13"
serde_json = "1"
syn = "2"

[dev-dependencies]
tempfile = "3"
