[package]
name = "indices-cli"
version = "0.0.6"
edition = "2024"
license = "MIT"
homepage = "https://indices.io"
repository = "https://github.com/indicesio/cli"

[[bin]]
name = "indices"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5"
opentelemetry = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "logs", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace", "logs"] }
os_info = "3"
posthog-rs = "0.5"
progenitor-client = "0.13"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query", "rustls", "stream"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["registry"] }
uuid = { version = "1", features = ["serde"] }

[build-dependencies]
openapiv3 = "2.2"
prettyplease = "0.2"
progenitor = "0.13"
serde_json = "1"
syn = "2"

[dev-dependencies]
tempfile = "3"
